<resources>
    <string name="app_name">Hotel</string>
    <string name="action_settings">Settings</string>
    <string name="booking">Rezervace</string>
    <string name="rooms">Pokoje</string>
    <string name="about">O hotelu</string>
    <string name="contact">Kontakt</string>
    <string name="title_activity_booking">Rezervace</string>
    <string name="title_activity_rooms">Pokoje</string>
    <string name="title_activity_services">Služby</string>
    <string name="title_activity_about">O hotelu</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="services">Služby</string>
    <string name="name">Name</string>
    <string name="second_name">Second name</string>
    <string name="address">Address</string>
    <string name="phone">Phone nr.</string>
    <string name="email">Email</string>
    <string name="days">Days</string>
    <string name="breakfast">Breakfast</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="reservation">Room reservation</string>
    <string name="emailValidation">Please enter valid email!</string>
    <string name="nameValidation">Please fill your name!</string>
    <string name="phoneValidation">Please fill valid phone nr.!</string>
</resources>
