<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_booking"
            android:checked="true"
            android:title="@string/booking"
            android:onClick="drawerClick"/>
        <item
            android:id="@+id/drawer_services"
            android:title="@string/services"
            android:onClick="drawerClick"/>
        <item
            android:id="@+id/drawer_rooms"
            android:title="@string/rooms"
            android:onClick="drawerClick"/>
        <item
            android:id="@+id/drawer_about"
            android:title="@string/about"
            android:onClick="drawerClick"/>
        <item
            android:id="@+id/drawer_contact"
            android:title="@string/contact"
            android:onClick="drawerClick"/>
    </group>
</menu>